added 2 endpoints, createcustomer, createaccount
