# transaction-service/src/main/java/com/bank/transaction/entity/Customer.java
@@ -1,0 +1,20 @@
+package com.bank.transaction.entity;
+
+
+import lombok.AllArgsConstructor;
+import lombok.Data;
+import lombok.NoArgsConstructor;
+
+@AllArgsConstructor
+@NoArgsConstructor
+@Data
+public class Customer {
+
+    private Long customerId;
+    private String customerName;
+    private String mobile;
+    private String email;
+    private String panNumber;
+
+
+}
